; ModuleID = '/home/carl/AnghaBench/linux/virt/kvm/extr_kvm_main.c_kvm_register_device_ops.c'
source_filename = "/home/carl/AnghaBench/linux/virt/kvm/extr_kvm_main.c_kvm_register_device_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_device_ops = type { i32 }

@kvm_device_ops_table = common dso_local global %struct.kvm_device_ops** null, align 8
@ENOSPC = common dso_local global i32 0, align 4
@EEXIST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kvm_register_device_ops(%struct.kvm_device_ops* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kvm_device_ops*, align 8
  %5 = alloca i64, align 8
  store %struct.kvm_device_ops* %0, %struct.kvm_device_ops** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.kvm_device_ops**, %struct.kvm_device_ops*** @kvm_device_ops_table, align 8
  %8 = call i64 @ARRAY_SIZE(%struct.kvm_device_ops** %7)
  %9 = icmp uge i64 %6, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* @ENOSPC, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %3, align 4
  br label %27

13:                                               ; preds = %2
  %14 = load %struct.kvm_device_ops**, %struct.kvm_device_ops*** @kvm_device_ops_table, align 8
  %15 = load i64, i64* %5, align 8
  %16 = getelementptr inbounds %struct.kvm_device_ops*, %struct.kvm_device_ops** %14, i64 %15
  %17 = load %struct.kvm_device_ops*, %struct.kvm_device_ops** %16, align 8
  %18 = icmp ne %struct.kvm_device_ops* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %13
  %20 = load i32, i32* @EEXIST, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %3, align 4
  br label %27

22:                                               ; preds = %13
  %23 = load %struct.kvm_device_ops*, %struct.kvm_device_ops** %4, align 8
  %24 = load %struct.kvm_device_ops**, %struct.kvm_device_ops*** @kvm_device_ops_table, align 8
  %25 = load i64, i64* %5, align 8
  %26 = getelementptr inbounds %struct.kvm_device_ops*, %struct.kvm_device_ops** %24, i64 %25
  store %struct.kvm_device_ops* %23, %struct.kvm_device_ops** %26, align 8
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %22, %19, %10
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i64 @ARRAY_SIZE(%struct.kvm_device_ops**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
